eks/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: nginx
spec:
  controller: k8s.io/ingress-nginx
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: boo-ping-controller-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: "kt.automic.io"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: boo-ping-controller-service
            port:
              number: 80
